Headline widget border-bottom fixed + new alignment options

--- a/src/assets/stylesheets/index.scss
+++ b/src/assets/stylesheets/index.scss
@@ -289,7 +289,6 @@ h6,
   display: block;
   position: relative;
   padding: 10px 0 20px 0;
-  text-align: center;
 }
 .b-bottom:after {
   content: "";
@@ -305,6 +304,16 @@ h6,
 .bg-greydark .b-bottom:after {
   background: rgba(111, 111, 111, 0.7);
 }
+.text-left.b-bottom:after {
+  left: 0%;
+  margin: 0;
+}
+.text-right.b-bottom:after {
+  left: auto;
+  right: 0%;
+  margin: 0;
+}
+
 
 hr {
   margin: 20px 0;
